[gd_scene load_steps=6 format=2]

[ext_resource path="res://item_scenes/SharpStickModel.tscn" type="PackedScene" id=1]
[ext_resource path="res://item_scenes/SharpStick.gd" type="Script" id=2]
[ext_resource path="res://art/sounds/01151 Throwing wooden log 2-full.wav" type="AudioStream" id=3]

[sub_resource type="CylinderShape" id=1]
radius = 0.0544399
height = 2.04241

[sub_resource type="CylinderShape" id=2]
radius = 0.0810642
height = 2.15397

[node name="SharpStickThrowable" type="KinematicBody" groups=["throwable"]]
collision_layer = 16
collision_mask = 10
script = ExtResource( 2 )

[node name="Pivot" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
collision_layer = 16
collision_mask = 10

[node name="CollisionShape2" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 2.689

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
